--- a/graphs/ubiquiti-graph.properties
+++ b/graphs/ubiquiti-graph.properties
@@ -367,12 +367,12 @@ report.ubntStaTable.ubntStaRate.command=--title="Station List: RX/TX Rates" \
  GPRINT:var2:MIN:"Min\\: %8.2lf %s" \
  GPRINT:var2:MAX:"Max\\: %8.2lf %s\\n"
 
-report.ubntStaTable.ubntStaTxBytes.name=UBNT-AirMAX-MIB::ubntStaTable::ubntStaTxBytes
-report.ubntStaTable.ubntStaTxBytes.columns=ubntStaTxBytes,ubntStaRxBytes
-report.ubntStaTable.ubntStaTxBytes.type=ubntStaEntry
+report.ubntStaTable.ubntStaBytes.name=UBNT-AirMAX-MIB::ubntStaTable::ubntStaBytes
+report.ubntStaTable.ubntStaBytes.columns=ubntStaTxBytes,ubntStaRxBytes
+report.ubntStaTable.ubntStaBytes.type=ubntStaEntry
 report.ubntStaTable.propertiesValues=ubntStaName
-report.ubntStaTable.ubntStaTxBytes.description=TX/RX bytes
-report.ubntStaTable.ubntStaTxBytes.command=--title="Station List: RX/TX Bytes" \
+report.ubntStaTable.ubntStaBytes.description=TX/RX bytes
+report.ubntStaTable.ubntStaBytes.command=--title="Station List: RX/TX Bytes" \
 --vertical-label="Bytes" \
  DEF:var1={rrd1}:ubntStaTxBytes:AVERAGE \
  DEF:var2={rrd2}:ubntStaRxBytes:AVERAGE \
@@ -428,12 +428,12 @@ report.ubntStaTable.ubntStaCapacity.command=--title="Station List RX/TX Capacity
  GPRINT:var2:MIN:"Min\\: %8.2lf %s" \
  GPRINT:var2:MAX:"Max\\: %8.2lf %s\\n"
  
-report.ubntStaTable.ubntStaTxAirtime.name=UBNT-AirMAX-MIB::ubntStaTable::ubntStaTxAirtime
-report.ubntStaTable.ubntStaTxAirtime.columns=ubntStaTxAirtime,ubntStaRxAirtime
-report.ubntStaTable.ubntStaTxAirtime.type=ubntStaEntry
+report.ubntStaTable.ubntStaAirtime.name=UBNT-AirMAX-MIB::ubntStaTable::ubntStaAirtime
+report.ubntStaTable.ubntStaAirtime.columns=ubntStaTxAirtime,ubntStaRxAirtime
+report.ubntStaTable.ubntStaAirtime.type=ubntStaEntry
 report.ubntStaTable.propertiesValues=ubntStaName
-report.ubntStaTable.ubntStaTxAirtime.description=Down/Uplink Airtime in % multiplied by 10
-report.ubntStaTable.ubntStaTxAirtime.command=--title="Station List: RX/TX Airtime" \
+report.ubntStaTable.ubntStaAirtime.description=Down/Uplink Airtime in % multiplied by 10
+report.ubntStaTable.ubntStaAirtime.command=--title="Station List: RX/TX Airtime" \
  DEF:var1={rrd1}:ubntStaTxAirtime:AVERAGE \
  DEF:var2={rrd2}:ubntStaRxAirtime:AVERAGE \
  LINE1:var1#00ccff:"Transmit" \
